--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.55",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
     "@types/ramda": "^0.27.49",
     "postcss": "^8.3.11",
